--- a/AboveBeneath/login.html
+++ b/AboveBeneath/login.html
@@ -11,7 +11,7 @@
 <div>
 	<h2 id="header" style="margin-left: 40% ; ">Sign in</h2>
 	<hr>
-	<div class="container">
+	<div class="containerSignIn">
 		<form action="dashboard.html">
 			<div class="form-group">
 			<label>
@@ -25,6 +25,7 @@
 				<input class="form-control" type="Password">
 			</label>
 		</div>
+			<button class="btn btn-signin active">Submit</button>
 		</form>
 	</div>
 </div>
