--- a/AboveBeneath/login.html
+++ b/AboveBeneath/login.html
@@ -13,7 +13,9 @@
 	<hr>
 	<div class="containerSignIn">
 		<form action="dashboard.html">
+		<h3>For both Users and Organizations</h3>
 			<div class="form-group">
+			<br>
 			<label>
 				Email:
 				<input  class="form-control" type="Email" required="">
