not finished, fixing bug

--- a/AboveBeneath/index3.html
+++ b/AboveBeneath/index3.html
@@ -99,9 +99,9 @@
 			</section><!-- /featured-content -->
 			<!-- Codrops header -->
 			<header class="codrops-header">
-				<nav class="codrops-demos">
+				<nav class="codrops-demos nav-custom">
 					<a href="signUp.html">Start Donating</a>
-					<a href="#">Login</a>
+					<a href="login.html">Sign In</a>
 
 					<rect x="71.6" y="71" width="20.1" height="20.1"/>
 				</nav>
