rename to userDashboard and add an alert

--- a/AboveBeneath/login.html
+++ b/AboveBeneath/login.html
@@ -12,7 +12,7 @@
 	<h2 id="header" style="margin-left: 40% ; ">Sign in</h2>
 	<hr>
 	<div class="containerSignIn">
-		<form action="dashboard.html">
+		<form action="userDashboard.html">
 		<h3>For both Users and Organizations</h3>
 			<div class="form-group">
 			<br>
