--- a/AboveBeneath/userDashboard.html
+++ b/AboveBeneath/userDashboard.html
@@ -46,6 +46,7 @@
       <br>
       <div class='row'>
         <button class='btn'>Settings</button>
+        <button id='submit-donation'type='submit' class='btn btn-success'>Submit</button>
       </div>
     </div>
 
