--- a/AboveBeneath/login.html
+++ b/AboveBeneath/login.html
@@ -16,7 +16,7 @@
 	<div class="containerSignIn">
 		<h3>For both Users and Organizations</h3>
 	<div class="row">
-		<form action="userdashboard.html" class="col-lg-6" name="myForm">
+		<form action="userDashboard.html" class="col-lg-6" name="myForm">
 			<div class="form-group">
 			<br>
 			<label>
