--- a/AboveBeneath/signUp.html
+++ b/AboveBeneath/signUp.html
@@ -5,13 +5,13 @@
 	<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 	<link rel="stylesheet" type="text/css" href="css/normalize.css" />
 <link href="https://fonts.googleapis.com/css?family=Alegreya:400i|Roboto+Mono|Stint+Ultra+Expanded" rel="stylesheet">
-
+<link rel="shortcut icon" href="favicon.ico">
 
 
 </head>
 <body class="signup">
 <div class="container">
-	<form action="" method="POST">
+	<form action="login.html" method="POST">
 		<h2 id="header">Register</h2>
 		<hr>
 		<div class="form-group">
@@ -58,7 +58,12 @@
 		</div>
 		
 		<button class="btn btn-custom active">Submit</button>
-
+		<br>
+		<br>
+		<div class="form-group">
+			Already a user ?
+			<button class="btn btn-custom">Sign in</button>
+		</div>
 	</form>
 </div>
 
